--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,8 @@
 #DB Add MaCh3 methodology of finding CUDA version and compute capability
 CUDAVER=$(shell nvcc --version | grep -o 'V[0-9].*' |  cut -d. -f1 |sed 's:V::')
+CUDAFULLPATH:=$(shell which nvcc | rev | cut -d'/' -f3- | rev)
+CUDALIB:=$(CUDAFULLPATH)/targets/x86_64-linux/lib 
+CUDAINC:=$(CUDAFULLPATH)/targets/x86_64-linux/include
 
 ifeq ($(shell expr $(CUDAVER) \< 9), 1)
 ARCH=	-gencode arch=compute_30,code=sm_30 \
@@ -28,10 +31,11 @@ endif
 all: gpu
 gpu:
 	nvcc -g -O0 -x cu $(ARCH) -lineinfo -std=c++11 -Xcompiler="-fopenmp -O0 -Wall" -I.. mainbeam.cpp -o mainbeamgpu
+	nvcc -g -O0 -x cu $(ARCH) -lineinfo -std=c++11 -Xcompiler="-fopenmp -O0 -Wall" -I.. mainatmos.cpp -o mainatmosgpu
 
 cpu:
-	g++ -g -O0 -std=c++11 -fopenmp -Wall -I.. -DUSE_CPU mainatmos.cpp -o mainatmoscpu
-	g++ -g -O0 -std=c++11 -fopenmp -Wall -I.. -DUSE_CPU mainbeam.cpp -o mainbeamcpu
+	g++ -g -O0 -std=c++11 -fopenmp -Wall -I.. -I$(CUDAINC) -L$(CUDALIB) -DUSE_CPU mainatmos.cpp -o mainatmoscpu
+	g++ -g -O0 -std=c++11 -fopenmp -Wall -I.. -I$(CUDAINC) -L$(CUDALIB) -DUSE_CPU mainbeam.cpp -o mainbeamcpu
 
 clean:
 	rm -f mainbeamgpu mainbeamcpu mainatmosgpu mainatmoscpu
