--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,14 +36,14 @@ if(${GPU_ON})
 
   SET(HEADERS_BEAM beamcudapropagator.cuh)
   SET(HEADERS_ATMOS atmoscudapropagator.cuh)
-  
-   
+
+
   SET(SOURCE_BEAM beamcudapropagator.cu)
   SET(SOURCE_ATMOS atmoscudapropagator.cu)
 
   add_library(CUDAProb3Beam SHARED ${SOURCE_BEAM})
   add_library(CUDAProb3Atmos SHARED ${SOURCE_ATMOS})
-  
+
   set_target_properties(CUDAProb3Beam PROPERTIES 
   	PUBLIC_HEADER "${HEADERS_BEAM}"
   	EXPORT_NAME CUDAProb3Beam
@@ -106,8 +106,12 @@ else()
   add_library(CUDAProb3Beam INTERFACE)
   add_library(CUDAProb3Atmos INTERFACE)
 
-  target_include_directories(CUDAProb3Beam INTERFACE ${PROJECT_SOURCE_DIR})
-  target_include_directories(CUDAProb3Atmos INTERFACE ${PROJECT_SOURCE_DIR})
+  target_include_directories(
+    CUDAProb3Beam PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
+                         $<INSTALL_INTERFACE:include>)
 
+  target_include_directories(
+    CUDAProb3Atmos PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
+                         $<INSTALL_INTERFACE:include>)
 
 endif()
